2011-10-13  Nico Weber  <thakis@chromium.org>

        [chromium] Automatically pull clang on `update-webkit --chromium` on mac
        https://bugs.webkit.org/show_bug.cgi?id=70058

        Reviewed by Adam Barth.

        * DEPS:

2011-10-13  John Knottenbelt  <jknotten@chromium.org>

        [Chromium] Allow building without speech input enabled.
        https://bugs.webkit.org/show_bug.cgi?id=69867

        Reviewed by Darin Fisher.

        * src/AssertMatchingEnums.cpp:
        * src/WebSpeechInputControllerMockImpl.cpp:
        (WebKit::WebSpeechInputControllerMock::create):
        * src/WebSpeechInputControllerMockImpl.h:
        * src/WebSpeechInputResult.cpp:

2011-10-13  Peng Huang  <shawn.p.huang@gmail.com>

        [chromium] Add a selectionBounds() method to WebWidget.
        https://bugs.webkit.org/show_bug.cgi?id=69028

        Reviewed by Darin Fisher.

        * public/WebWidget.h:
        (WebKit::WebWidget::selectionBounds):
        * src/WebViewImpl.cpp:
        (WebKit::WebViewImpl::selectionRange):
        (WebKit::WebViewImpl::selectionBounds):
        * src/WebViewImpl.h:

2011-10-13  Kent Tamura  <tkent@chromium.org>

        Cleanup of HTMLSelectElement
        https://bugs.webkit.org/show_bug.cgi?id=69908

        Reviewed by Darin Adler.

        Change the HTMLSelectElement::listItems() return type:
          Vector<Element*> -> Vector<HTMLElement*>

        * src/WebSearchableFormData.cpp:
        (HTMLNames::IsSelectInDefaultState):
        * src/WebSelectElement.cpp:
        (WebKit::WebSelectElement::listItems):

2011-10-12  Joseph Pecoraro  <joepeck@webkit.org>

        Pass Parsed Accept Attribute MIME Types to WebKit Clients
        https://bugs.webkit.org/show_bug.cgi?id=69598

        Reviewed by Kent Tamura.

        Chromium uses the deprecated accept string. Switching to
        the new approach will require coordination with their port.

        * src/ChromeClientImpl.cpp: